changed the side bar, fixed dark mode related bugs, fixed form sub error

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 }
 
 :root { /* these are global variables decleared inside of the :root selector */
+    color-scheme: light only;
     --main-color: #A66CFF;
     --second-color: #C689C6;
     --text-color: #395B64;
@@ -49,7 +50,6 @@ header {
     padding: 5px 100px;
     height: 70px;
 }
-
 
 #menu-icon {
     font-size: 24px;
@@ -136,7 +136,7 @@ transition: 0.5s;
 h2 {
     font-size: clamp(3rem, 6vw, 4.6rem);
     text-align: center;
-    color: #395B64;
+    color: var(--text-color);
 }
 h2 span {
     color: var(--main-color);
@@ -146,7 +146,7 @@ p{
     text-align: center;
     font-weight: 500;
     margin-bottom: 30px;
-    color: #395B64;
+    color: var(--text-color);
     font-size:  clamp(1rem, 1vw, 1.5rem);
     font-weight: 700;
    
@@ -175,7 +175,7 @@ p{
 .socialIcons i{
   font-size: 1.2rem;
   font-weight: 600;
-  background-color:#395B64;
+  background-color:var(--text-color);
   padding: 10px;
   border-radius: 100%;
   margin: 0 5px;
@@ -194,7 +194,7 @@ p{
    
     width: 20%;
    margin: 40px auto;
-   border: 3px solid #395B64;
+   border: 3px solid var(--text-color);
    border-radius: 15px;
  }
 
@@ -379,7 +379,7 @@ button {
 }
 button:hover {
 
-    color: #395B64;
+    color: var(--text-color);
     transition: 0.7s;
 }
 footer {
@@ -423,6 +423,7 @@ footer {
     border-right: 2px solid #444;
 
   }
+ 
   .sidenav a {
     color: #fff;
     font-weight: 600;
@@ -468,8 +469,12 @@ footer {
     top: 2px;
     font-weight: 700;
   }
-  .sideHome, .sideAbout, .sideServ{
-    margin-bottom: 40px;
+.sideAbout, .sideServ{
+    margin-bottom: 5vh;
+  }
+  .sideHome {
+    margin-top: 10vh;
+    margin-bottom: 5vh;
   }
   .sideHome a, .sideAbout a, .sideServ a, .sideContact a{
     color: var(--text-color);
